--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <button onclick="playWord('audio/actuallytired.mp3')">🔊 發音</button>
 
     </div>
+<div class="word-item">
+        <span class="word">漢其實蠻累的誒</span>
+        <button onclick="playWord('audio/actuallytired.mp3')">🔊 發音</button>
 
    </div>
 <div class="word-item">
@@ -54,3 +57,4 @@
     </div>
 </body>
 </html>
+
