--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <span class="word">誒</span>
         <button onclick="playWord('audio/ei.mp3')">🔊 發音</button>
     </div>
-
+<div class="comment">
+        <p>（n.）雞蛋</p>
+        <p>例句：eat an ei.</p>
+    </div>
     <script src="audio_player.js"></script> 
 
 <div class="word-item">
@@ -54,5 +57,6 @@
     </div>
 </body>
 </html>
+
 
 
