--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <button onclick="playWord('audio/ei.mp3')">🔊 發音</button>
     </div>
 <div class="comment">
-        <p>（n.）雞蛋</p>
-        <p>例句：eat an ei.</p>
+        <p>很誒的意思</p>
+        <p>例句：A:有點想那個 B:誒~</p>
     </div>
     <script src="audio_player.js"></script> 
 
@@ -57,6 +57,7 @@
     </div>
 </body>
 </html>
+
 
 
 
