--- a/index.html
+++ b/index.html
@@ -55,8 +55,14 @@
         <button onclick="playWord('audio/noah.mp3')">🔊 發音</button>
 
     </div>
+       </div>
+<div class="word-item">
+        <span class="word">孬殘</span>
+        <button onclick="playWord('audio/noah.mp3')">🔊 發音</button>
+
 </body>
 </html>
+
 
 
 
