--- a/index.html
+++ b/index.html
@@ -59,9 +59,14 @@
 <div class="word-item">
         <span class="word">孬殘</span>
         <button onclick="playWord('audio/noah.mp3')">🔊 發音</button>
-
+       </div>
+<div class="word-item">
+        <span class="word">ㄟ 捨麼聲音</span>
+        <button onclick="playWord('audio/noah.mp3')">🔊 發音</button>
+       </div>
 </body>
 </html>
+
 
 
 
