--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         <button onclick="playWord('audio/no4.mp3')">🔊 發音</button>
 
     </div>
-
+ </div>
+<div class="comment">
+        <p>誒不是的意思</p>
+        <p>例句：A:有點想那個 B:誒不是</p>
 <div class="word-item">
         <span class="word">我們已經不同圈子了</span>
         <button onclick="playWord('audio/wnoc.mp3')">🔊 發音</button>
@@ -41,12 +44,21 @@
 <div class="word-item">
         <span class="word">誒你幹嘛</span>
         <button onclick="playWord('audio/ayyouw.mp3')">🔊 發音</button>
+ </div>
+<div class="comment">
+        <p>阻止的意思</p>
+        <p>例句：A:有點喜歡那個女生 B:誒你幹嘛</p>
 
+  
     </div>
 <div class="word-item">
         <span class="word">漢其實蠻累的誒</span>
         <button onclick="playWord('audio/actuallytired.mp3')">🔊 發音</button>
-
+ </div>
+<div class="comment">
+        <p>嘆息的意思</p>
+        <p>例句：A:明天要考試 B:漢其實蠻累的誒</p>
+    </div>
 
 
    </div>
@@ -54,18 +66,40 @@
         <span class="word">就沒有啊</span>
         <button onclick="playWord('audio/noah.mp3')">🔊 發音</button>
 
+     </div>
+<div class="comment">
+        <p>秘密的意思</p>
+        <p>例句：A:明天要考試嗎? B:就沒有啊</p>
     </div>
+  
        </div>
 <div class="word-item">
         <span class="word">孬殘</span>
         <button onclick="playWord('audio/nobrain.mp3')">🔊 發音</button>
        </div>
+     </div>
+<div class="comment">
+        <p>吐槽的意思</p>
+        <p>例句：A:gewIGHIOWE B:>孬殘</p>
+    </div>
+  
 <div class="word-item">
         <span class="word">ㄟ 捨麼聲音</span>
         <button onclick="playWord('audio/whatsound.mp3')">🔊 發音</button>
        </div>
+     </div>
+<div class="comment">
+        <p>害怕的意思</p>
+        <p>例句：A:報! B:>ㄟ 捨麼聲音</p>
+    </div>
+    <div class="word-item">
+        <span class="word">很兇</span>
+        <button onclick="playWord('audio/whatsound.mp3')">🔊 發音</button>
+       </div>
+     </div>
 </body>
 </html>
+
 
 
 
