Fix HTML structure and duplicate elements

--- a/index.html
+++ b/index.html
@@ -94,11 +94,17 @@
     </div>
     <div class="word-item">
         <span class="word">很兇</span>
-        <button onclick="playWord('audio/whatsound.mp3')">🔊 發音</button>
-       </div>
+        <button onclick="playWord('audio/mad.mp3')">🔊 發音</button>
+    
+     </div>
+<div class="comment">
+        <p>很兇的意思</p>
+        <p>例句：A:欠打嗎 B:>很兇</p>
+    </div>
      </div>
 </body>
 </html>
+
 
 
 
